# jrtests-learn-dbt

./: README.md  environment.yaml  pyproject.toml
my_jrtest/: dbt_project.yml
my_jrtest1/: dbt_project.yml
my_jrtest2/: dbt_project.yml
