[tool.poetry]
name = "jrtests-learn-dbt"
version = "0.1.0"
description = "dbt with poetry test"
authors = ["Jesse"]

[tool.poetry.dependencies]
python = "^3.8"
dbt-core = "^1.0.5"
dbt-postgres = "^1.0.5"
dbt-snowflake = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
